force-app/main/default/objects/vlocity_ins__OrderEventLogEntry__b/fields/vlocity_ins__EventData__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__EventData__c</fullName>
    <description>This field is used to store the whole Notification message</description>
    <label>Event Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>