force-app/main/default/objects/vlocity_ins__OrderEventLogEntry__b/fields/vlocity_ins__EventTime__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__EventTime__c</fullName>
    <description>This field describes the time at which event occurred</description>
    <label>Event Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>