force-app/main/default/objects/vlocity_ins__OrderEventLogEntry__b/fields/vlocity_ins__OrderId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__OrderId__c</fullName>
    <description>Order Id of the Order</description>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Order Event Log Entries</relationshipLabel>
    <relationshipName>OrderEventLogEntries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>